# sys-buddy

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  DOGFOOD.md  Dockerfile  KICKOFF.md  LICENSE  Makefile  OSS.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml  v2.md
.github/: CODEOWNERS  pull_request_template.md
design/: NOTE.md  README.md
design/project/: .thumbnail  Sys-Buddy Dashboard.dc.html
features/v1.1.0/: README.md  seed_demo.py
reference/: AGENT_BUS_GUIDE.md  NOTE.md  SETUP.md  agent_bus.py
releases/: v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.1.0.md  v1.1.1.md
sessions/: 2026-07-16-sys-buddy-build.md  2026-07-17-sys-buddy-build.md  2026-07-18-gui-mvp.md  2026-07-18-security-hardening.md  2026-07-19-collab-and-role-redesign.md  2026-07-19-role-prompt-redesign.md  2026-07-20-browser-buddy-join-page.md  2026-07-20-preflight-stepper-negotiations.md  2026-07-20-repair-safe-mcp-and-loader-page.md  2026-07-23-get-contract-shows-proposal.md  role-prompt-redesign-checklist.md
src/sys_buddy/: admin.py  api.py  audit.py  cli.py  config.py  contracts.py  db.py  gui.py  gui_app.html  gui_home.html  http_middleware.py  (+14 more)
tests/: conftest.py  test_admin.py  test_api.py  test_cli.py  test_contracts.py  test_debug.py  test_directed.py  test_identity.py  test_messaging.py  test_onboarding.py  test_pairing.py  test_presence.py  test_readiness.py  test_security_hardening.py  test_server.py  test_slack.py  test_state.py  test_todos_api.py  test_todos_cli.py  test_todos_state.py  test_todos_tools.py
